# MatSci-Agent

./: .gitignore  CONTEXT.md  Dockerfile  README.md  note.md  plan.md  pyproject.toml  requirements.txt
agent_specs/: .env.example  README.md  codex_debugger.md  controller.md  final_verifier.md  materials_query_critic.md  retrieval_tester.md
artifacts/: bandgap_benchmark_small.csv  bandgap_benchmark_small.json  bandgap_benchmark_small.md
docs/adr/: 0001-manager-style-retrieval-repair-harness.md
examples/: benchmark_bandgap_predictor.py  run_discovery.py  run_mp_retrieval.py
memory/decisions/: decision.md
memory/logs/: 2026-05-01.md  2026-05-02.md  2026-05-11.md
memory/progress/: progress.md
models/pretrained/TensorNet-PES-MatPES-PBE-2025.2/: README.md  model.json  model.pt  state.pt
src/matsci_agent/: __init__.py  config.py  schemas.py
src/matsci_agent/agents/: __init__.py  planner.py  reporter.py  search_space_expander.py
src/matsci_agent/api/: main.py
src/matsci_agent/cli/: __init__.py  doctor.py  main.py  render.py  scenarios.py  transport.py
src/matsci_agent/evaluation/: bandgap_benchmark.py
src/matsci_agent/guardrails/: __init__.py  capability.py
src/matsci_agent/multiagent/: __init__.py  cli.py  factory.py  orchestrator.py  prompt_loader.py  schemas.py  sdk.py  settings.py  tools.py
src/matsci_agent/nlp/: __init__.py  parser.py
src/matsci_agent/observability/: mlflow_logger.py
src/matsci_agent/tools/: __init__.py  mp_retriever.py  policy_filter.py  property_predictor.py  stability_checker.py
tests/: test_bandgap_benchmark.py  test_cli.py  test_discover.py  test_mp_retriever.py  test_nlp_parser.py  test_planner_guardrail.py  test_policy_filter.py  test_prompt_qa.py  test_property_predictor.py  test_search_space_expander.py  test_stability_checker.py
(+29 files in other folders)
