[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matsci-agent"
version = "0.1.0"
description = "Agentic Materials Discovery System scaffold"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "MatSci-Agent" }]
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.9.0",
  "langgraph>=0.6.0",
  "mlflow>=2.16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
]
mp = [
  "mp-api>=0.45.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
