[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matsci-agent"
version = "0.1.0"
description = "Agentic Materials Discovery System scaffold"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "MatSci-Agent" }]
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.9.0",
  "langgraph>=0.6.0",
  "mlflow>=2.16.0",
  "openai>=1.40.0",
  "anthropic>=0.40.0",
  "typer>=0.16.0",
  "rich>=13.9.0",
]

[project.scripts]
matsci = "matsci_agent.cli.main:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
]
mp = [
  "mp-api>=0.45.0",
]
matgl = [
  "matgl>=1.3.0",
  "torch>=2.2.0,<2.4.0",
  "torchdata>=0.8.0,<0.9.0",
  "dgl>=2.2.0; python_version < '3.13'",
  "pymatgen>=2024.8.0",
  "ase>=3.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
